# EasyFlow

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOY_ORACLE_FREE.md  Dockerfile  LICENSE  ORACLE_BEGINNER_STEPS.md  ORACLE_FREE_TIER_QUOTAS.txt  README.md  VERCEL_NEON_DEMO.md  app.py  config.py  docker-compose.yml  main.py  notifier.py  package-lock.json  package.json  requirements.txt  start.sh  storage.py
.githooks/: pre-commit
.github/workflows/: cd-docker.yml  ci.yml
apps/api/: alembic.ini  manage_migrations.py  pyproject.toml  requirements.txt
apps/api/app/: access.py  config.py  connectors.py  db.py  deps.py  main.py  messaging.py  models.py  notifications.py  store.py  webhooks.py  worker.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_tenant_connectors.py
apps/web/: .env.example  Dockerfile  middleware.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: ai-prediction-panel.tsx  app-shell.tsx  architecture-diagrams.tsx  canvas-edge.tsx  canvas-node.tsx  canvas-shell.tsx  create-tenant-form.tsx  forecasting-dashboard.tsx  globe-hero.tsx  (+20 more)
docs/databricks/: easyflow_risk_scorer.py  risk_signal_feed.sql
examples/: procurement_workflow.json
examples/n8n-workflows/: oracle-to-easyflow.json  sap-to-easyflow.json
scraper/: amazon.py
scripts/: install-git-hooks.sh
scripts/oracle/: bootstrap-vm.sh  prepare-env.sh
tests/: test_access_control.py  test_workflow_engine.py
(+95 files in other folders)
