[project]
name = "easyflow-api"
version = "0.1.0"
description = "EasyFlow API scaffold"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30.0",
  "aiosqlite>=0.20.0",
  "aio-pika>=9.5.4",
  "prometheus_client>=0.16.0",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.1",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.30.0"
]

[tool.uvicorn]
factory = false
